# avxtest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE
build-nocl/: CMakeCache.txt  Makefile  cmake_install.cmake  test
build-nocl/easycl/: Makefile  cmake_install.cmake
easycl/: CMakeLists.txt
easycl/include/: device.h  easycl.h  kernel.h  program.h
easycl/src/: device.cc  easycl.cc  kernel.cc  program.cc
include/: common_math.h  mandelbrot_highway.h  mandelbrot_opencl.h
mandelbrot/: CMakeLists.txt
mandelbrot/easycl/: CMakeLists.txt
mandelbrot/easycl/include/: device.h  easycl.h  program.h
mandelbrot/easycl/src/: device.cc  program.cc
mandelbrot/include/: common_math.h  mandelbrot.h  mandelbrot_highway.h  mandelbrot_opencl.h
mandelbrot/src/: mandelbrot.cc  mandelbrot_highway.cc  mandelbrot_opencl_program.cl
src/: main.cc  main.py  mandelbrot_highway.cc  mandelbrot_opencl.cc  mandelbrot_opencl_program.cl  mandelbrot_wrapper.py  testlib.cc
